# mcp-workflow

./: Cargo.toml  LICENSE  README.md  mcp-server.toml
src/: domain.rs  engine.rs  lib.rs  main.rs  server.rs  store.rs  types.rs
